# project-sql-agent

./: .gitignore  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
services/backend_api/: .env.example  config.py  data.db  sales_transactions.csv  test.ipynb
services/backend_api/app/: config.py  main.py
services/backend_api/app/chat_services/: agents.py  chat.py  chat_history.py  graph.py  graph_server.py
services/backend_api/app/models/: chat_models.py  state.py
services/backend_api/example/: test.ipynb
services/database/: .env.example  config.py  docker-compose.yml  load_data_to_db.py  preprocess_data.ipynb  put_data_in_sql.ipynb
services/database/cleaned_resources/: media_customer_reviews.csv  media_gold_reviews_chunked.csv  sales_customers.csv  sales_franchises.csv  sales_suppliers.csv  sales_transactions.csv
services/database/example/: put_data_in_sql.ipynb
services/database/resources/: media_customer_reviews.csv  media_gold_reviews_chunked.csv  sales_customers.csv  sales_franchises.csv  sales_suppliers.csv  sales_suppliers_add.csv  sales_suppliers_missing_suppliers.csv
services/frontend/: .env.example  Untitled  package.json  pnpm-lock.yaml  tsconfig.json
services/frontend/.next/: prerender-manifest.json  react-loadable-manifest.json  trace
services/frontend/.next/cache/: .rscinfo
services/frontend/.next/server/: middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
services/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
services/frontend/.next/server/vendor-chunks/: @babel+runtime@7.27.1.js  @cfworker+json-schema@4.1.1.js  @floating-ui+core@1.7.0.js  @floating-ui+dom@1.7.0.js  @floating-ui+react-dom@2.1.2_react-dom@19.1.0_react@19.1.0__react@19.1.0.js  @floating-ui+utils@0.2.9.js  @langchain+core@1.0.2_openai@4.100.0_ws@8.18.2_zod@4.1.12_.js  @langchain+langgraph-checkpoint@1.0.0_@langchain+core@1.0.2_openai@4.100.0_ws@8.18.2_zod@4.1.12__.js  @langchain+langgraph-sdk@1.0.0_@langchain+core@1.0.2_openai@4.100.0_ws@8.18.2_zod@4.1.1_d3585816486509a9b2bded58b21ff99d.js  @langchain+langgraph@1.0.1_@langchain+core@1.0.2_openai@4.100.0_ws@8.18.2_zod@4.1.12____efa4e8f86558e5d29ebdec3d2f004ed9.js  @radix-ui+primitive@1.1.2.js  @radix-ui+react-arrow@1.1.6_@types+react-dom@19.1.5_@types+react@19.1.4__@types+react@1_0f11206d0f33f095dc8c3b8879d50e63.js  @radix-ui+react-compose-refs@1.1.2_@types+react@19.1.4_react@19.1.0.js  @radix-ui+react-context@1.1.2_@types+react@19.1.4_react@19.1.0.js  @radix-ui+react-dialog@1.1.13_@types+react-dom@19.1.5_@types+react@19.1.4__@types+react_5ed38e1b3c7e62fec8207201a660395e.js  @radix-ui+react-dismissable-layer@1.1.9_@types+react-dom@19.1.5_@types+react@19.1.4__@t_6fa579b84aec5e61a5b40d10bb671609.js  @radix-ui+react-focus-guards@1.1.2_@types+react@19.1.4_react@19.1.0.js  @radix-ui+react-focus-scope@1.1.6_@types+react-dom@19.1.5_@types+react@19.1.4__@types+r_9046d94f65ef3c964b2f2739c4ebef1d.js  @radix-ui+react-id@1.1.1_@types+react@19.1.4_react@19.1.0.js  @radix-ui+react-label@2.1.6_@types+react-dom@19.1.5_@types+react@19.1.4__@types+react@1_f5d76421f0b83349b902a67252a7f51f.js  @radix-ui+react-popper@1.2.6_@types+react-dom@19.1.5_@types+react@19.1.4__@types+react@_d5459adb46993a50615f22c9197e0a71.js  @radix-ui+react-portal@1.1.8_@types+react-dom@19.1.5_@types+react@19.1.4__@types+react@_e792b184a2ca1dccf9b400aadd0fc7f8.js  @radix-ui+react-presence@1.1.4_@types+react-dom@19.1.5_@types+react@19.1.4__@types+reac_0d0cd24fc19ea4534d390a6089f37aea.js  @radix-ui+react-primitive@2.1.2_@types+react-dom@19.1.5_@types+react@19.1.4__@types+rea_7b933c94c4e5e4ade0d694d5b36d9593.js  @radix-ui+react-separator@1.1.6_@types+react-dom@19.1.5_@types+react@19.1.4__@types+rea_d210a7a195800167ad876e0fd1ea8b5e.js  @radix-ui+react-slot@1.2.2_@types+react@19.1.4_react@19.1.0.js  @radix-ui+react-switch@1.2.4_@types+react-dom@19.1.5_@types+react@19.1.4__@types+react@_633ca8da003794aaf2f024c24b4e7c67.js  @radix-ui+react-tooltip@1.2.6_@types+react-dom@19.1.5_@types+react@19.1.4__@types+react_77fd30315bd1adbf71ffcb3d3c7056c6.js  @radix-ui+react-use-callback-ref@1.1.1_@types+react@19.1.4_react@19.1.0.js  @radix-ui+react-use-controllable-state@1.2.2_@types+react@19.1.4_react@19.1.0.js  @radix-ui+react-use-effect-event@0.0.2_@types+react@19.1.4_react@19.1.0.js  @radix-ui+react-use-escape-keydown@1.1.1_@types+react@19.1.4_react@19.1.0.js  @radix-ui+react-use-layout-effect@1.1.1_@types+react@19.1.4_react@19.1.0.js  @radix-ui+react-use-previous@1.1.1_@types+react@19.1.4_react@19.1.0.js  (+153 more)
services/frontend/src/app/: page.tsx
services/frontend/src/hooks/: use-pyodide.tsx
services/frontend/src/providers/: Pyodide.tsx
(+365 files in other folders)
